--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,23 @@
 
-spring.datasource.url = jdbc:mysql://localhost:3306/reservations?autoreconnect = true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.url = jdbc:mysql://localhost:3306/reservations?autoreconnect = true&useSSL=false&serverTimezone=Europe/Brussels&useLegacyDatetimeCode=false
+#spring.datasource.url = jdbc:mysql://labsql.eafc-uccle.be/elmh1412_reservations?autoReconnect=true&useSSL=false
 spring.datasource.username = root
 spring.datasource.password =
 spring.datasource.tomcat.testOnBorrow = true
+#spring.jpa.datasource.driverClassName = com.mysql.cj.jdbc.Driver
+#spring.jpa.show-sql = true
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
 ## This is important
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = validate
+#spring.jpa.hibernate.ddl-auto = validate
+#spring.main.allow-circular-references= true
 
 spring.flyway.baseline-on-migrate=true
+
+
+
 
