--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.url = jdbc:mysql://localhost:3306/reservations?autoreconnect =
 spring.datasource.username = root
 spring.datasource.password =
 spring.datasource.tomcat.testOnBorrow = true
+spring.mvc.hiddenmethod.filter.enabled=true
 #spring.jpa.datasource.driverClassName = com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql = true
 
