Ajout Dep H2 & devtools & profile Maven

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,34 @@
 	<properties>
 		<java.version>17</java.version>
 	</properties>
+	
+	<profiles>
+        <profile>
+            <id>dev</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <activatedProperties>dev</activatedProperties>
+                <build.name>${project.name}-dev</build.name>
+            </properties>
+        </profile>
+        <profile>
+            <id>qa</id>
+            <properties>
+                <activatedProperties>qa</activatedProperties>
+                <build.name>${project.name}-qa</build.name>
+            </properties>
+        </profile>
+        <profile>
+            <id>prod</id>
+            <properties>
+                <activatedProperties>prod</activatedProperties>
+                <build.name>${project.name}-prod</build.name>
+            </properties>
+        </profile>
+    </profiles>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
