--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,18 @@
 	<groupId>be.iccbxl.pid</groupId>
 	<artifactId>reservationsSpringboot</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+
 	<name>reservationsSpringboot</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
