--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,5 +20,11 @@ spring.mvc.hiddenmethod.filter.enabled=true
 spring.flyway.baseline-on-migrate=true
 
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=elouisdadimhamed@gmail.com
+spring.mail.password=mihnqpkkhxcjbnno
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 
